--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Run RSS-Bridge docker
         uses: docker://rssbridge/rss-bridge:latest
         with:
-          args: -v $GITHUB_WORKSPACE/bridges:/config
+          args: -v /home/runner/work/rss-bridge-tester/rss-bridge-tester/bridges:/config
       - name: Run bridge tests
         run: |
           curl 'localhost';
