--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -17,11 +17,11 @@ jobs:
       - name: Run RSS-Bridge docker
         uses: docker://rssbridge/rss-bridge:latest
         with:
-          args: -v /home/runner/work/rss-bridge-tester/rss-bridge-tester/bridges:/config
+          args: -v /home/runner/work/rss-bridge-tester/rss-bridge-tester/bridges:/config -p 3000:80
       - name: Run bridge tests
         run: |
-          curl 'localhost';
-          curl -m 1200 'http://localhost/?action=display&bridge=Tester&url=localhost&format=Json' -o rss.json;
+          curl 'localhost:3000';
+          curl -m 1200 'http://localhost:3000/?action=display&bridge=Tester&url=localhost&format=Json' -o rss.json;
           jq -r '.items[].tags | @csv' rss.json > rss.csv;
           cat rss.csv >> results.csv;
       - name: Update deployment files
