--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Build docker
         run: |
           docker build -t bridgetester .
-          docker run -d bridgetester
+          docker run -d bridgetester -p 3000:80
       - name: Sleep for 10 seconds
         run: sleep 10s
         shell: bash
       - name: Run bridge tests
         run: |
-          curl -m 1200 'http://localhost/?action=display&bridge=Tester&url=localhost&format=Json' -o rss.json;
+          curl -m 1200 'http://localhost:3000/?action=display&bridge=Tester&url=localhost&format=Json' -o rss.json;
           jq -r '.items[].tags | @csv' rss.json > rss.csv;
           cat rss.csv >> results.csv;
       - name: Update deployment files
