--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -16,8 +16,9 @@ jobs:
         uses: actions/checkout@v2.3.2
       - name: Build docker
         run: |
-          docker build -t bridgetester .;
-          docker run -d bridgetester -p 3000:80
+          docker build -t bridgetester .
+      - name: Start docker
+        uses: bridgetester
       - name: Sleep for 10 seconds
         run: sleep 10s
         shell: bash
