--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -18,7 +18,8 @@ jobs:
         run: |
           docker build -t bridgetester .
       - name: Start docker
-        uses: bridgetester
+        run: |
+          docker run -d bridgetester -p 3000:80
       - name: Sleep for 10 seconds
         run: sleep 10s
         shell: bash
