--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -19,16 +19,14 @@ jobs:
           docker build -t bridgetester .
       - name: Start docker
         run: |
-          docker run -d -p 80 tutum/hello-world
-      - name: Sleep for 10 seconds
-        run: sleep 10s
-        shell: bash
+          mkdir ./temprss
+          docker run -d -p 80 -v ./temprss:/temprss bridgetester
       - name: Run bridge tests
         run: |
-          curl http://localhost;
-          curl -m 1200 'https://localhost:3000/?action=display&bridge=Tester&url=localhost&format=Json' -o rss.json;
-          jq -r '.items[].tags | @csv' rss.json > rss.csv;
-          cat rss.csv >> results.csv;
+          # curl http://localhost;
+          # curl -m 1200 'https://localhost:3000/?action=display&bridge=Tester&url=localhost&format=Json' -o rss.json;
+          # jq -r '.items[].tags | @csv' rss.json > rss.csv;
+          cat ./temprss/rss.csv >> results.csv;
       - name: Update deployment files
         uses: test-room-7/action-update-file@v1
         with:
