testing local docker access

--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -17,10 +17,12 @@ jobs:
       - name: Start docker
         run: |
           echo "*" > whitelist.txt;
-          docker run -d -v whitelist.txt:/app/whitelist.txt --network host ghcr.io/rss-bridge/rss-bridge:latest
+          docker run -d -v whitelist.txt:/app/whitelist.txt -p 3000:80 ghcr.io/rss-bridge/rss-bridge:latest
       - name: Sleep for 5 seconds
         run: sleep 5s
         shell: bash
+      - name: Test container
+        run: curl localhost:3000
       - name: Setup python
         uses: actions/setup-python@v2
         with:
