--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Start docker
         run: |
           echo "*" > /home/runner/work/rss-bridge-tester/rss-bridge-tester/whitelist.txt;
-          docker run -d -v /home/runner/work/rss-bridge-tester/rss-bridge-tester/whitelist.txt:/app/whitelist.txt ghcr.io/rss-bridge/rss-bridge:latest
+          docker run -d -v /home/runner/work/rss-bridge-tester/rss-bridge-tester/whitelist.txt:/app/whitelist.txt -p 3000:80 ghcr.io/rss-bridge/rss-bridge:latest
       - name: Sleep for 5 seconds
         run: sleep 5s
         shell: bash
       - name: Test container
-        run: curl localhost
+        run: curl localhost:3000
       - name: Setup python
         uses: actions/setup-python@v2
         with:
