--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -2,8 +2,8 @@ name: 'Bridge Tests'
 
 on:
   schedule:
-    - cron:  '0 7 * * 1,4'
-    # scheduled at 07:00 every Monday and Thursday
+    - cron:  '0 7,15,22 * * *'
+    # scheduled at 07, 15 and 22 every day
 
   workflow_dispatch:  # click the button on Github repo!
 
