--- a/.github/workflows/bridge-test.yml
+++ b/.github/workflows/bridge-test.yml
@@ -2,7 +2,7 @@ name: 'Bridge Tests'
 
 on:
   schedule:
-    - cron:  '0 7,15,22 * * *'
+    - cron:  '0 4 * * 6'
     # scheduled at 07, 15 and 22 every day
 
   workflow_dispatch:  # click the button on Github repo!
